Fix colour and text align for EventMemberTag

--- a/frontend/src/components/Events/EventMemberTag.less
+++ b/frontend/src/components/Events/EventMemberTag.less
@@ -22,6 +22,9 @@
     margin-right: 8px;
     height: 20px;
     width: 20px;
+    span {
+      height: 5px;
+    }
   }
   p {
     margin-bottom: 0;
